tests/js/valid/functions/parses/spaces-0.buri
A = Int
B = Int
a = (hello:A,world:B)=>0