tests/js/invalid/function/mismatched-types-1.buri
func: Func = (a: Int) => a
hello = func("hello")